log
Fri, May  2, 2025  8:36:19 PM: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:45:18: error: statement with no effect [-Werror=unused-value]
     new->current == NULL;
                  ^
treemap.c:46:15: error: statement with no effect [-Werror=unused-value]
     new->root == NULL;
               ^
cc1.exe: all warnings being treated as errors
5729e4d
Fri, May  2, 2025  8:43:19 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
e824bca
